--- a/en/about/index.html
+++ b/en/about/index.html
@@ -1,4 +1,5 @@
-<!doctype html><html lang=en-us>
+<a name=top></a><!doctype html>
+<html lang=en-us>
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
@@ -32,30 +33,18 @@
 </ul>
 </nav>
 </header>
-<main class=content>
-<div class=list-page>
-<h3 id=english-homepage-test>English homepage test</h3>
-<ul>
-<h2 style=text-align:left>2023</h2>
-<p>
-<span class=date>
-2023-04-09
-</span>
-<a href=/en/posts/>
-English Posts
-</a>
-</p>
-<h2 style=text-align:left>0001</h2>
-<p>
-<span class=date>
-0001-01-01
-</span>
-<a href=/en/about/>
-About me
-</a>
-</p>
-</ul>
+<main class=content role=main>
+<div class="body-text list-text">
+<h1><span class=title>About me</span></h1>
+<p>Poet
+and
+Photographer</p>
+<p>Stories
+in
+Seattle</p>
+<p style=color:#777>Last modified on 0001-01-01</p>
 </div>
+<a href=#top><i class="fa fa-chevron-up" style=font-size:30px;color:#000></i></a>
 </main>
 <footer class=footer>
 <script type=text/javascript src=/js/math-code.js></script>
@@ -78,5 +67,3 @@ Yuanxi Li
 2023-
 </div>
 </footer>
-<div style=text-align:center;color:gray;margin-top:-20px;font-size:19px;margin-bottom:10px>
-</div>
