deploy: 72156d2b9b2c17f5bc9d41ec1cd986d4dbcbb2fd

--- a/index.html
+++ b/index.html
@@ -43,22 +43,22 @@
 <br>
 <br></p>
 <div align=center>
-Nice to meeet you! This is Yuanxi Li.
+Nice to meet you! This is Yuanxi Li.
 <br>
 不是诗人。<br>
 <br>
-<figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
-<a href=/files/wx.png itemprop=contentUrl>
-<img itemprop=thumbnail src=/files/wx.png>
-</a>
-</figure>
-<a href=https://mp.weixin.qq.com/s/XBrGu85AZQpTnPfz1sEu8Q>太阳 月亮和瞎想八想</a><br>
 <figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
 <a href=/files/linkedin.png itemprop=contentUrl>
 <img itemprop=thumbnail src=/files/linkedin.png>
 </a>
 </figure>
 <a href=https://www.linkedin.com/in/yuanxi-li-614370293>Yuanxi Li</a><br>
+<figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
+<a href=/files/wx.png itemprop=contentUrl>
+<img itemprop=thumbnail src=/files/wx.png>
+</a>
+</figure>
+<a href=https://mp.weixin.qq.com/s/XBrGu85AZQpTnPfz1sEu8Q>太阳 月亮和瞎想八想</a><br>
 <br>
 </div>
 </div>
