deploy: cbc9bd7e0c951e1317c0120c09a711676f7d8938

--- a/en/1/01/01/frozen-fountain/index.html
+++ b/en/1/01/01/frozen-fountain/index.html
@@ -37,7 +37,7 @@
 <div style=text-align:center>
 <h1>Frozen Fountain</h1>
 <p>Yuanxi Li
-/ 2023-11-15 </p>
+</p>
 <hr>
 </div>
 <span class=article-toolbar>
@@ -46,8 +46,8 @@
 </span>
 <div class="body-text list-text">
 <figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
-<a href=/files/frozen-fountain.JPG itemprop=contentUrl>
-<img itemprop=thumbnail src=/files/frozen-fountain.JPG>
+<a href=/files/frozen-fountain.jpg itemprop=contentUrl>
+<img itemprop=thumbnail src=/files/frozen-fountain.jpg>
 </a>
 </figure>
 <p>Inscribed in ice, the fountain&rsquo;s rest,<br>
