deploy: 31744581caceeac0c8149b3e8e2ecddc1e7ba1f0

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div align=center>
 Nice to meet you! This is Yuanxi Li.
 <br>
-不是诗人。<br>
+欢迎来到我的网站。<br>
 <br>
 <figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
 <a href=/files/linkedin.png itemprop=contentUrl>
