deploy: 45cf4cffab93e3da7f841857c3baad72ac7f4cd3

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -36,11 +36,7 @@
 <main class=content role=main>
 <div class="body-text list-text">
 <h1><span class=title>About me</span></h1>
-<figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
-<a href=/files/yuanxi.JPG itemprop=contentUrl>
-<img itemprop=thumbnail src=/files/yuanxi.JPG>
-</a>
-</figure>
+<img src=/files/yuanxi.JPG alt=Yuanxi style=width:50%>
 <p>Yuanxi Li is an undergraduate student at the University of Washington, majoring in Informatics and Sociology, with a deep interest in privacy, cybersecurity, digital inequalities, and computational social sciences. Yuanxi has a strong research background, currently working as an undergraduate research assistant in various projects focused on misinformation, cybersecurity, user experience, and social justice issues. Yuanxi is committed to leveraging technology and research to address critical issues related to social justice, cybersecurity, and digital inequalities.</p>
 <p style=color:#777>Last modified on 2023-06-25</p>
 </div>
