deploy: f7482483828a39f79f4a5dfd159a4a3b026bb6f7

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -39,7 +39,7 @@
 <div style=text-align:center>
 <img src=/files/yuanxi.JPG alt=Yuanxi style=width:50%>
 </div>
-<p>Yuanxi Li is an undergraduate student at the University of Washington, majoring in Informatics and Sociology, with a deep interest in privacy, cybersecurity, digital inequalities, and computational social sciences. Yuanxi has a strong research background, currently working as an undergraduate research assistant in various projects focused on misinformation, cybersecurity, user experience, and social justice issues. Yuanxi is committed to leveraging technology and research to address critical issues related to social justice, cybersecurity, and digital inequalities.</p>
+<p>Yuanxi Li is an undergraduate student at the University of Washington, majoring in Informatics and Sociology, with a deep interest in privacy, cybersecurity, digital inequalities, and computational social sciences. Yuanxi has a strong research background, currently working as an undergraduate research assistant in projects focused on misinformation, cybersecurity, user experience, and social justice issues. Yuanxi is committed to utilizing technology and research to address critical issues related to social justice, cybersecurity, and digital inequalities.</p>
 <p style=color:#777>Last modified on 2023-06-25</p>
 </div>
 <a href=#top><i class="fa fa-chevron-up" style=font-size:30px;color:#000></i></a>
