--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 <div align=center>
 Nice to meet you! This is Yuanxi Li.
 <br>
-欢迎来到我的网站。<br>
+Bio written in third person:
+<p>Yuanxi Li is an undergraduate student at the University of Washington, majoring in Informatics and Sociology, with a deep interest in privacy, cybersecurity, digital inequalities, and computational social sciences. Yuanxi has a strong research background, currently working as an undergraduate research assistant in projects focused on misinformation, cybersecurity, user experience, and social justice issues. Yuanxi is committed to utilizing technology and research to address critical issues related to social justice, cybersecurity, and digital inequalities. In her free time, Yuanxi is interested in Poetry and Photography.
 <br>
+{<figure src=/files/emailicon.png>}}<a href=yuanxili@uw.edu>yuanxili@uw.edu</a>
 <figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
 <a href=/files/linkedin.png itemprop=contentUrl>
 <img itemprop=thumbnail src=/files/linkedin.png>
@@ -58,8 +60,8 @@ Nice to meet you! This is Yuanxi Li.
 <img itemprop=thumbnail src=/files/wx.png>
 </a>
 </figure>
-<a href=https://mp.weixin.qq.com/s/XBrGu85AZQpTnPfz1sEu8Q>太阳 月亮和瞎想八想</a><br>
-<br>
+<a href=https://mp.weixin.qq.com/s/XBrGu85AZQpTnPfz1sEu8Q>公众号：太阳 月亮和瞎想八想</a><br>
+<br></p>
 </div>
 </div>
 </main>
