deploy: e6b9f1bbd8e0e5079bd7854e76cf30aec58bbce4

--- a/index.html
+++ b/index.html
@@ -44,11 +44,19 @@
 <br></p>
 <div align=center>
 Nice to meet you! This is Yuanxi Li.
-<br>
+<br><br>
+</div>
 Bio written in third person:
-<p>Yuanxi Li is an undergraduate student at the University of Washington, majoring in Informatics and Sociology, with a deep interest in privacy, cybersecurity, digital inequalities, and computational social sciences. Yuanxi has a strong research background, currently working as an undergraduate research assistant in projects focused on misinformation, cybersecurity, user experience, and social justice issues. Yuanxi is committed to utilizing technology and research to address critical issues related to social justice, cybersecurity, and digital inequalities. In her free time, Yuanxi is interested in Poetry and Photography.
 <br>
-{<figure src=/files/emailicon.png>}}<a href=yuanxili@uw.edu>yuanxili@uw.edu</a>
+Yuanxi Li is an undergraduate student at the University of Washington, majoring in Informatics and Sociology, with a deep interest in privacy, cybersecurity, digital inequalities, and computational social sciences. Yuanxi has a strong research background, currently working as an undergraduate research assistant in projects focused on misinformation, cybersecurity, user experience, and social justice issues. Yuanxi is committed to utilizing technology and research to address critical issues related to social justice, cybersecurity, and digital inequalities. In her free time, Yuanxi is interested in Poetry and Photography.
+<br>
+<div align=center>
+<figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
+<a href=/files/emailicon.png itemprop=contentUrl>
+<img itemprop=thumbnail src=/files/emailicon.png>
+</a>
+</figure>
+<a href=yuanxili@uw.edu>yuanxili@uw.edu</a><br>
 <figure itemprop=associatedMedia itemscope itemtype=http://schema.org/ImageObject>
 <a href=/files/linkedin.png itemprop=contentUrl>
 <img itemprop=thumbnail src=/files/linkedin.png>
@@ -61,7 +69,7 @@ Bio written in third person:
 </a>
 </figure>
 <a href=https://mp.weixin.qq.com/s/XBrGu85AZQpTnPfz1sEu8Q>公众号：太阳 月亮和瞎想八想</a><br>
-<br></p>
+<br>
 </div>
 </div>
 </main>
